    LeaseRenewer.pendingCreates.  (szetszwo)

    HDFS-1865. Share LeaseRenewer among DFSClients so that there is only a
    LeaseRenewer thread per namenode per user.  (szetszwo)

    HDFS-1917. Separate hdfs jars from common in ivy configuration.  (Eric Yang
    via szetszwo)

    HDFS-1945. Removed the deprecated fields in DataTransferProtocol.
    (szetszwo)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-1449. Fix test failures - ExtendedBlock must return 
    block file name in #getBlockName(). (suresh)

    HDFS-1680. Fix TestBalancer. (szetszwo)

    HDFS-1705. Balancer command throws NullPointerException. (suresh via
    szetszwo)

    HDFS-1559. Add missing UGM overrides to TestRefreshUserMappings
    (Todd Lipcon via eli)

    HDFS-1585. Fix build after HDFS-1547 (todd)

    HDFS-1684. Balancer cannot start with with multiple namenodes.  (szetszwo)

    HDFS-1445. Fast Snapshot via batch hardlinks. (Matt Foley)

    HDFS-1656. Fixes an issue to do with fetching of delegation tokens in
    HftpFileSystem. (Kan Zhang via ddas)

    HDFS-1809. Missing DefaultMetricsSystem initialization breaks some tests.
    (suresh)

    HDFS-1602. Fix testStorageRestore (boryas)

    HDFS-1730. Move DaemonFactory from HDFS to Common (Erik Steffl)

    HDFS-1703. Run the namenodes and secondary namenodes on hosts
    returned by hdfs getconf (Erik Steffl)

    HDFS-1871. Mapreduce build fails due to MiniDFSCluster change from
    HDFS-1052. (suresh)

    HDFS-1876. One MiniDFSCluster constructor ignores numDataNodes parameter
    (todd)

    HDFS-1831. Fix append bug in FileContext and implement CreateFlag
    check (related to HADOOP-7223). (suresh)

    HDFS-1748. Balancer utilization classification is incomplete.  (szetszwo)

    HDFS-1860. when renewing/canceling DelegationToken over http we need to
     pass exception information back to the caller.(boryas)

    HDFS-1889. incorrect path in start/stop dfs script. (John George via eli)
